added babel to transpile JSX and added concurrently to run development server

--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devstart": "nodemon server.js"
+    "devstart": "concurrently \"nodemon server.js\" \"npx babel --watch src --out-dir public --presets react-app/prod\"",
+    "build": "npx babel src --out-dir public --presets react-app/prod"
   },
   "author": "Michael Singhurse",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.5"
   }
