--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "chart.js": "^2.9.4",
     "express": "^4.17.1"
   },
   "devDependencies": {
